# godot-sandbox-demo

./: .gitignore  generated_api.hpp.uid  hello_world.elf  icon.svg.import  luajit.elf  project.godot  test.json
addons/godot_sandbox/: Build.svg.import  C#Script.svg.import  CPPScript.svg.import  ELFScript.svg.import  JSScript.svg.import  RustScript.svg.import  Sandbox.svg.import  TSScript.svg.import  ZIGScript.svg.import  downloader.gd.uid  plugin.gd.uid
assets/: Screenshot from 2024-08-15 16-01-33.png.import  Screenshot from 2024-08-16 09-04-37.png.import  Screenshot from 2024-08-16 09-06-33.png.import  Screenshot from 2024-08-16 09-07-43.png.import  Screenshot from 2024-08-23 06-59-55.png.import
assets/sprites/: coin.png.import  fruit.png.import  knight.png.import  platforms.png.import  slime_green.png.import  slime_purple.png.import  world_tileset.png.import
assets/tiles/bg_santorini_layers/: bg_santorini_1.png.import  bg_santorini_2.png.import
cmake/: CMakeLists.txt  autobuild.sh  build.sh  cmake
extensions/: libgodot-riscv.gdextension
json_diff_sample/: readme.md
json_diff_sample/core/: generate_api.gd  generate_api.gd.uid  sandbox.gd  sandbox.gd.uid
json_diff_sample/json_diff/: CMakeLists.txt  autobuild.sh  compile.sh  json_diff.cpp  json_diff.cpp.uid
json_diff_sample/scenes/: node_3d.tscn  node_3d.tscn276042347.tmp
rust/: build.sh  main.rs  rust.elf  rust_program.gd
scenes/: coin.cpp  coin.tscn  init.gd  kill_zone.tscn  label.gd  platform.tscn  player.tscn  riscv_emulator.tscn  scenes.elf  slime.tscn  timer.gd
scenes/coin/: coin.cpp  coin.elf  coin.tscn
scenes/killzone/: kill_zone.tscn  killzone.cpp  killzone.elf
scenes/mod/: cjit.elf  mod.gd  mod.tscn
scenes/player/: player.cpp  player.elf  player.hpp  player.tscn
scenes/scenes/: coin.elf
scenes/slime/: slime.cpp  slime.elf
scenes/slime-rs/: main.rs  node.gd  slime-rs.elf
slide_knight/art/: coin.png.import  fruit.png.import  knight.png.import  platforms.png.import  slime_green.png.import  slime_purple.png.import  world_tileset.png.import
slide_knight/art/bg_santorini_layers/: bg_santorini_1.png.import  bg_santorini_2.png.import
slide_knight/art/screenshots/: Screenshot from 2024-08-15 16-01-33.png.import  Screenshot from 2024-08-16 09-04-37.png.import  Screenshot from 2024-08-16 09-06-33.png.import  Screenshot from 2024-08-16 09-07-43.png.import  Screenshot from 2024-08-23 06-59-55.png.import
slide_knight/core/: label.gd  label.gd.uid
slide_knight/core/coin/: coin.cpp  coin.cpp.uid  coin.elf  coin.elf.uid  coin.tscn
slide_knight/core/killzone/: killzone.cpp  killzone.cpp.uid  killzone.elf  killzone.elf.uid
slide_knight/core/player/: player.cpp  player.cpp.uid  player.elf  player.elf.uid  player.hpp.uid  player.tscn
slide_knight/core/slime/: slime.cpp  slime.cpp.uid  slime.elf  slime.elf.uid  slime.tscn
slide_knight/core/slime-rs/: main.rs.uid  slime-rs.elf.uid
slide_knight/scenes/: riscv_emulator.tscn
test/: asmjit.elf  luajit.elf  new_script.cpp  robust_weight_transfer.elf  test.cpp  test.elf  test.gd
test2/: new_script.cpp  test2.cpp  test2.elf
zig/: new_script.zig  test_zig.gd  zig.elf
